force-app/main/default/objects/County_State__c/County_State__c.object-meta.xml
<CustomObject>
    <label>County State</label>
    <nameField>
        <label>County State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>County States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>