force-app/main/default/objects/County_State__c/fields/County_Fips_Number__c.field-meta.xml
<CustomField>
    <fullName>County_Fips_Number__c</fullName>
    <label>County Fips Number</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>