force-app/main/default/objects/County_State__c/fields/County_short_Name__c.field-meta.xml
<CustomField>
    <fullName>County_short_Name__c</fullName>
    <label>County short Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>