force-app/main/default/objects/County_State__c/fields/FIPS_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Class_Code__c</fullName>
    <label>FIPS Class Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>