force-app/main/default/objects/County_State__c/fields/FIPS_State_Numeric_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_State_Numeric_Code__c</fullName>
    <label>FIPS State Numeric Code</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>