force-app/main/default/objects/County_State__c/fields/Full_County_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_County_Name__c</fullName>
    <label>Full County Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>