force-app/main/default/objects/County_State__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <label>State Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>