force-app/main/default/objects/County_State__c/fields/X2022_County_Population__c.field-meta.xml
<CustomField>
    <fullName>X2022_County_Population__c</fullName>
    <label>2022 County Population</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>