force-app/main/default/objects/County_State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_County_Name__c</columns>
    <columns>State_Abbreviation__c</columns>
    <columns>X2022_County_Population__c</columns>
    <columns>State_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>